# PatientPose

./: .gitignore  README.md  pyproject.toml
config/: labeling_recipes.json
scripts/: debug_pose_quality_frames.py  mocopi_egocentric_compare.py  mocopi_reliability_export.py  mocopi_side_by_side.py  mocopi_sync_example.py  sample_patient_processing.py  video_labeling_gui.py
src/analysis_tools/: landmark_utils.py
src/image_overlays/: __init__.py
src/mocopi/: __init__.py  bvh_io.py  features.py  sync.py
src/video_tools/: __init__.py  deidentification.py  frame_sampling.py  image_quality_utils.py  orientation.py  orientation_focus.py  pose_focus.py  pose_quality.py  video_stabilizer.py
test/analysis_tools/: test_landmark_utils.py
test/video_tools/: test_orientation_focus.py
